src/generated/DoctorLangParser.cpp

// Generated from DoctorLang.g4 by ANTLR 4.13.2


#include "DoctorLangVisitor.h"

#include "DoctorLangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct DoctorLangParserStaticData final {
  DoctorLangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  DoctorLangParserStaticData(const DoctorLangParserStaticData&) = delete;
  DoctorLangParserStaticData(DoctorLangParserStaticData&&) = delete;
  DoctorLangParserStaticData& operator=(const DoctorLangParserStaticData&) = delete;
  DoctorLangParserStaticData& operator=(DoctorLangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag doctorlangParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<DoctorLangParserStaticData> doctorlangParserStaticData = nullptr;

void doctorlangParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (doctorlangParserStaticData != nullptr) {
    return;
  }
#else
  assert(doctorlangParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<DoctorLangParserStaticData>(
    std::vector<std::string>{
      "file", "line", "type", "variable", "function", "fd"
    },
    std::vector<std::string>{
      "", "':'", "'('", "')'", "", "';'", "','"
    },
    std::vector<std::string>{
      "", "", "", "", "WORD", "ENDSTATEMENT", "COMMA", "SPACE", "NEWLINE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  doctorlangParserStaticData = std::move(staticData);
}

}

DoctorLangParser::DoctorLangParser(TokenStream *input) : DoctorLangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

DoctorLangParser::DoctorLangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  DoctorLangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *doctorlangParserStaticData->atn, doctorlangParserStaticData->decisionToDFA, doctorlangParserStaticData->sharedContextCache, options);
}

DoctorLangParser::~DoctorLangParser() {
  delete _interpreter;
}

const atn::ATN& DoctorLangParser::getATN() const {
  return *doctorlangParserStaticData->atn;
}

std::string DoctorLangParser::getGrammarFileName() const {
  return "DoctorLang.g4";
}

const std::vector<std::string>& DoctorLangParser::getRuleNames() const {
  return doctorlangParserStaticData->ruleNames;
}

const dfa::Vocabulary& DoctorLangParser::getVocabulary() const {
  return doctorlangParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView DoctorLangParser::getSerializedATN() const {
  return doctorlangParserStaticData->serializedATN;
}


//----------------- FileContext ------------------------------------------------------------------

DoctorLangParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DoctorLangParser::LineContext *> DoctorLangParser::FileContext::line() {
  return getRuleContexts<DoctorLangParser::LineContext>();
}

DoctorLangParser::LineContext* DoctorLangParser::FileContext::line(size_t i) {
  return getRuleContext<DoctorLangParser::LineContext>(i);
}


size_t DoctorLangParser::FileContext::getRuleIndex() const {
  return DoctorLangParser::RuleFile;
}


std::any DoctorLangParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DoctorLangVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

DoctorLangParser::FileContext* DoctorLangParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, DoctorLangParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(15);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DoctorLangParser::WORD) {
      setState(12);
      antlrcpp::downCast<FileContext *>(_localctx)->lineContext = line();
      antlrcpp::downCast<FileContext *>(_localctx)->lines.push_back(antlrcpp::downCast<FileContext *>(_localctx)->lineContext);
      setState(17);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

DoctorLangParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DoctorLangParser::FdContext* DoctorLangParser::LineContext::fd() {
  return getRuleContext<DoctorLangParser::FdContext>(0);
}

std::vector<tree::TerminalNode *> DoctorLangParser::LineContext::SPACE() {
  return getTokens(DoctorLangParser::SPACE);
}

tree::TerminalNode* DoctorLangParser::LineContext::SPACE(size_t i) {
  return getToken(DoctorLangParser::SPACE, i);
}

std::vector<tree::TerminalNode *> DoctorLangParser::LineContext::NEWLINE() {
  return getTokens(DoctorLangParser::NEWLINE);
}

tree::TerminalNode* DoctorLangParser::LineContext::NEWLINE(size_t i) {
  return getToken(DoctorLangParser::NEWLINE, i);
}


size_t DoctorLangParser::LineContext::getRuleIndex() const {
  return DoctorLangParser::RuleLine;
}


std::any DoctorLangParser::LineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DoctorLangVisitor*>(visitor))
    return parserVisitor->visitLine(this);
  else
    return visitor->visitChildren(this);
}

DoctorLangParser::LineContext* DoctorLangParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 2, DoctorLangParser::RuleLine);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(18);
    fd();
    setState(22);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DoctorLangParser::SPACE) {
      setState(19);
      match(DoctorLangParser::SPACE);
      setState(24);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(28);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DoctorLangParser::NEWLINE) {
      setState(25);
      match(DoctorLangParser::NEWLINE);
      setState(30);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

DoctorLangParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DoctorLangParser::TypeContext::WORD() {
  return getToken(DoctorLangParser::WORD, 0);
}


size_t DoctorLangParser::TypeContext::getRuleIndex() const {
  return DoctorLangParser::RuleType;
}


std::any DoctorLangParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DoctorLangVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

DoctorLangParser::TypeContext* DoctorLangParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, DoctorLangParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    match(DoctorLangParser::WORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

DoctorLangParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DoctorLangParser::VariableContext::WORD() {
  return getToken(DoctorLangParser::WORD, 0);
}

DoctorLangParser::TypeContext* DoctorLangParser::VariableContext::type() {
  return getRuleContext<DoctorLangParser::TypeContext>(0);
}

std::vector<tree::TerminalNode *> DoctorLangParser::VariableContext::SPACE() {
  return getTokens(DoctorLangParser::SPACE);
}

tree::TerminalNode* DoctorLangParser::VariableContext::SPACE(size_t i) {
  return getToken(DoctorLangParser::SPACE, i);
}


size_t DoctorLangParser::VariableContext::getRuleIndex() const {
  return DoctorLangParser::RuleVariable;
}


std::any DoctorLangParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DoctorLangVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

DoctorLangParser::VariableContext* DoctorLangParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 6, DoctorLangParser::RuleVariable);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    antlrcpp::downCast<VariableContext *>(_localctx)->name = match(DoctorLangParser::WORD);
    setState(48);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(37);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == DoctorLangParser::SPACE) {
        setState(34);
        match(DoctorLangParser::SPACE);
        setState(39);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(40);
      match(DoctorLangParser::T__0);
      setState(44);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == DoctorLangParser::SPACE) {
        setState(41);
        match(DoctorLangParser::SPACE);
        setState(46);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(47);
      antlrcpp::downCast<VariableContext *>(_localctx)->typ = type();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

DoctorLangParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DoctorLangParser::VariableContext *> DoctorLangParser::FunctionContext::variable() {
  return getRuleContexts<DoctorLangParser::VariableContext>();
}

DoctorLangParser::VariableContext* DoctorLangParser::FunctionContext::variable(size_t i) {
  return getRuleContext<DoctorLangParser::VariableContext>(i);
}

std::vector<tree::TerminalNode *> DoctorLangParser::FunctionContext::SPACE() {
  return getTokens(DoctorLangParser::SPACE);
}

tree::TerminalNode* DoctorLangParser::FunctionContext::SPACE(size_t i) {
  return getToken(DoctorLangParser::SPACE, i);
}

std::vector<tree::TerminalNode *> DoctorLangParser::FunctionContext::COMMA() {
  return getTokens(DoctorLangParser::COMMA);
}

tree::TerminalNode* DoctorLangParser::FunctionContext::COMMA(size_t i) {
  return getToken(DoctorLangParser::COMMA, i);
}


size_t DoctorLangParser::FunctionContext::getRuleIndex() const {
  return DoctorLangParser::RuleFunction;
}


std::any DoctorLangParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DoctorLangVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

DoctorLangParser::FunctionContext* DoctorLangParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 8, DoctorLangParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    antlrcpp::downCast<FunctionContext *>(_localctx)->var = variable();
    setState(54);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DoctorLangParser::SPACE) {
      setState(51);
      match(DoctorLangParser::SPACE);
      setState(56);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(57);
    match(DoctorLangParser::T__1);

    setState(59);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == DoctorLangParser::WORD) {
      setState(58);
      antlrcpp::downCast<FunctionContext *>(_localctx)->variableContext = variable();
      antlrcpp::downCast<FunctionContext *>(_localctx)->params.push_back(antlrcpp::downCast<FunctionContext *>(_localctx)->variableContext);
    }
    setState(64);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DoctorLangParser::SPACE) {
      setState(61);
      match(DoctorLangParser::SPACE);
      setState(66);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(77);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DoctorLangParser::COMMA) {
      setState(67);
      match(DoctorLangParser::COMMA);
      setState(71);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == DoctorLangParser::SPACE) {
        setState(68);
        match(DoctorLangParser::SPACE);
        setState(73);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(74);
      antlrcpp::downCast<FunctionContext *>(_localctx)->variableContext = variable();
      antlrcpp::downCast<FunctionContext *>(_localctx)->params.push_back(antlrcpp::downCast<FunctionContext *>(_localctx)->variableContext);
      setState(79);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(80);
    match(DoctorLangParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FdContext ------------------------------------------------------------------

DoctorLangParser::FdContext::FdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DoctorLangParser::FunctionContext* DoctorLangParser::FdContext::function() {
  return getRuleContext<DoctorLangParser::FunctionContext>(0);
}

tree::TerminalNode* DoctorLangParser::FdContext::ENDSTATEMENT() {
  return getToken(DoctorLangParser::ENDSTATEMENT, 0);
}


size_t DoctorLangParser::FdContext::getRuleIndex() const {
  return DoctorLangParser::RuleFd;
}


std::any DoctorLangParser::FdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DoctorLangVisitor*>(visitor))
    return parserVisitor->visitFd(this);
  else
    return visitor->visitChildren(this);
}

DoctorLangParser::FdContext* DoctorLangParser::fd() {
  FdContext *_localctx = _tracker.createInstance<FdContext>(_ctx, getState());
  enterRule(_localctx, 10, DoctorLangParser::RuleFd);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    function();
    setState(83);
    match(DoctorLangParser::ENDSTATEMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void DoctorLangParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  doctorlangParserInitialize();
#else
  ::antlr4::internal::call_once(doctorlangParserOnceFlag, doctorlangParserInitialize);
#endif
}
